src/test/resources/failing/fail35.pnd
Foo(x, x) : int, int